# personal-finance-toolkit

./: README.md  logging_config.yaml  pyproject.toml
.github/workflows/: tests.yml
docs/: expense_categorizer.md
examples/: categories_config.yaml  sample_bank_statement.csv  sample_categorized.csv
src/personal_finance_toolkit/: __init__.py  cli.py  logging_config.py
src/personal_finance_toolkit/categorizers/: __init__.py  expense_categorizer.py
src/personal_finance_toolkit/config/: __init__.py  category_config.py
tests/: __init__.py
tests/categorizers/: test_expense_categorizer.py
tests/config/: test_category_config.py
